@@ -4,10 +4,12 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- buildout infrastructure refresh [kiorky]
+- plone 4.3 compatibility [kiorky]
 - Switch tests from collective.testcaselayer to plone.app.testing [kiorky]
 - Merge expemimental work on UI & jobs back to master
   [kiorky]
-- Add plone UI to view jobs 
+- Add plone UI to view jobs
   [davisagli]
 - Added support for queued/deferred tasks.
   [kiork,davisagli,do3cc]
